# Session6-Task

./: CMakeLists.txt  README.md  aggregator_node.py  package.xml
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/weather_pkg/lib/weather_pkg/: aggregator_node
ros2_ws/install/weather_pkg/share/weather_pkg/: package.sh  package.xml
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/weather_pkg/: package.xml  setup.py
ros2_ws/src/weather_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/weather_pkg/install/weather_pkg/lib/weather_pkg/: aggregator_node
ros2_ws/src/weather_pkg/install/weather_pkg/share/weather_pkg/: package.sh
ros2_ws/src/weather_pkg/log/: latest_build
ros2_ws/src/weather_pkg/srv/: data.srv  data.srv.save
ros2_ws/src/weather_pkg/srv/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/weather_pkg/srv/log/: latest_build
ros2_ws/src/weather_pkg/weather_pkg/: aggregator_node.py  humidity_node.py  pressure_node.py  remote_station_node.py  temperature_node.py
